--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.3.2",
+    "@auth/prisma-adapter": "^1.0.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^4.16.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "next": "13.4.7",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.5"
+    "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.3.2",
+    "prisma": "^4.16.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.5"
   }
 }
